<resources>
    <string name="app_name">Temperature Converter</string>
    <string name="enter_temperature">Enter temperature</string>
    <string name="celsius_to_fahrenheit">Celsius to Fahrenheit</string>
    <string name="fahrenheit_to_celsius">Fahrenheit to Celsius</string>
    <string name="convert">Convert</string>
    <string name="result">Result</string>
    <string name="please_enter_value">Please enter a value</string>
    <string name="fahrenheit_result">%.2f °F</string>
    <string name="celsius_result">%.2f °C</string>
</resources>